--- a/src/main/resources/com/virtanimal/login.fxml
+++ b/src/main/resources/com/virtanimal/login.fxml
@@ -5,44 +5,43 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane fx:id="loginPage"
-            prefHeight="569.0"
-            prefWidth="854.0"
             xmlns="http://javafx.com/javafx/17.0.12"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.virtanimal.LoginController">
+            fx:controller="com.virtanimal.LoginController"
+            prefHeight="500" prefWidth="500"
+            stylesheets="style.css">
 
-    <children>
-        <Button fx:id="logbackbtn" layoutX="4" layoutY="4" onAction="#backToStartPage" prefHeight="25.0" prefWidth="38.0" text="←">
-        </Button>
+    <ImageView fx:id="backgroundImage"
+               fitWidth="500.0" fitHeight="500.0"
+               layoutX="0.0" layoutY="0.0"
+               preserveRatio="false" />
 
-    </children>
 
-    <ImageView fx:id="backgroundImage" preserveRatio="false" />
+    <Button fx:id="logbackbtn"
+            layoutX="4" layoutY="4"
+            prefHeight="25.0" prefWidth="38.0"
+            text="←" onAction="#backToStartPage"/>
 
-    <VBox fx:id="loginForm" alignment="CENTER"
+    <VBox fx:id="loginForm"
+          alignment="CENTER"
           spacing="15.0"
           prefWidth="400.0" prefHeight="390.0"
-          AnchorPane.leftAnchor="227.0"
-          AnchorPane.topAnchor="89.0"
-          style="-fx-background-color: rgba(255,255,255,0.85); -fx-background-radius: 15; -fx-padding: 25;">
-
+          AnchorPane.leftAnchor="50.0"
+          AnchorPane.topAnchor="55.0">
 
         <Label text="Login Form" styleClass="label-title"/>
 
         <TextField fx:id="usernameField"
                    promptText="Username"
-                   maxWidth="300.0"
-                   styleClass="text-field" />
+                   styleClass="text-field"/>
 
         <TextField fx:id="passwordField"
                    promptText="Password"
-                   maxWidth="300.0"
                    styleClass="password-field"/>
 
         <Button text="Login"
                 onAction="#handleLogin"
-                styleClass="startpage-btn"
-                prefWidth="150"/>
+                styleClass="startpage-btn"/>
     </VBox>
 
 </AnchorPane>
