--- a/src/main/resources/com/virtanimal/startpage.fxml
+++ b/src/main/resources/com/virtanimal/startpage.fxml
@@ -1,38 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
+<Pane fx:id="container"
+      xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="com.virtanimal.StartPG"
+      stylesheets="/com/virtanimal/style.css"
+      prefWidth="500" prefHeight="500">
 
-<AnchorPane fx:id="startPage"
-            prefHeight="674.0"
-            prefWidth="971.0"
-            stylesheets="@style.css"
-            xmlns="http://javafx.com/javafx/17.0.12"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.virtanimal.StartPage">
+    <ImageView fx:id="bgImage" fitWidth="500.0" fitHeight="500.0"/>
 
-    <children>
-        <ImageView fx:id="backgroundImage" fitWidth="971.0" fitHeight="674.0" preserveRatio="false" />
-        <StackPane AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
-            <VBox alignment="center" spacing="20">
-                <Label text="'MY LOVELY PET'" styleClass="startpage-lbl" textFill="WHITE">
-                    <font>
-                        <Font name="Berlin Sans FB" size="41.0" />
-                    </font>
-                </Label>
+    <VBox layoutX="200.0" layoutY="200.0" spacing="12">
+        <Button fx:id="regBtn" text="Register" onAction="#goToRegister" prefWidth="120" prefHeight="40"/>
+        <Button fx:id="logBtn" text="Login" onAction="#goToLogin" prefWidth="120" prefHeight="40"/>
+    </VBox>
 
-                <Button fx:id="registerButton" styleClass="startpage-btn" text="REGISTER" prefHeight="54.0" prefWidth="158.0" onAction="#goToRegister" />
-                <Button fx:id="loginButton" styleClass="startpage-btn" text="LOGIN" prefHeight="54.0" prefWidth="125.0" onAction="#goToLogin" />
-            </VBox>
-        </StackPane>
-    </children>
-
-</AnchorPane>
-
-
+</Pane>
